# chandas-compile

./: CONTRIBUTING.md  LICENSE  README.md  debug_trace.py  doc  main.py  pyproject.toml  temp_debug.py  temp_meter_debug.py
.github/workflows/: python-ci.yml
core/: __init__.py  benchmark.py  binary_rules.py  chandassu_validator.py  cli.py  data_ingest.py  kirtana_fsm.py  kirtana_validator.py  meter_validator.py  tokenizer.py
datasets/: advanced_metre_corpus.json  sample_benchmark.json  sample_corpus.json
docs/: ai-agent-roadmap.md  benchmark_design.md  future_work.md  implementation_plan.md  research_notes.md  rule_reference.md
examples/: usage_example.py
tests/: test_advanced_metre_corpus.py  test_benchmark.py  test_binary_rules.py  test_binary_rules_trace.py  test_chandassu_validator.py  test_cli.py  test_data_ingest.py  test_data_ingest_versioning.py  test_kirtana_fsm.py  test_kirtana_validator.py  test_kirtana_validator_extended.py  test_meter_validator.py  test_yati_prasa_rules.py
